--- a/modulo03/demo-esmodules-internacionalization/package.json
+++ b/modulo03/demo-esmodules-internacionalization/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon --ignore database.json --exec node --experimental-json-modules src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha -w --parallel ./test/*.test.js",
+    "test:cov": "npx nyc npx mocha -r reify --parallel ./test/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,11 @@
     "draftlog": "^1.0.13"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "chai": "^4.3.7",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.20",
+    "nyc": "^15.1.0",
+    "reify": "^0.20.12",
+    "sinon": "^9.2.4"
   }
 }
